# fuckery

./: .gitmodules  README.md  commands.txt  gitFuckery.txt  pawLugter.txt
rtic_stm32/: .gitignore  Cargo.toml  memory.x  readme.md
rtic_stm32/.cargo/: config.toml
rtic_stm32/examples/: blinky.rs  can_ping_pong.rs  clean.rs  edge_counter.rs  fun.rs  spi.rs  spi_sender.rs  spii.rs  spiii.rs
rtic_stm32/src/: lib.rs
rust/app/: Cargo.toml  memory.x
rust/app/.cargo/: config.toml
rust/app/src/: main.rs
rust/guessing_game/src/: main.rs
