[package]
authors = ["Lukas-Fasken <56631858+Lukas-Fasken@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}    #needed for rtt-target
cortex-m-rt = "0.6.10"                                                          #core real time
cortex-m-rtic = "1.1.3"                                                         # RTIC framework for concurrency
panic-probe = { version = "0.2", features = ["print-rtt"] }                     #panic
rtt-target = "0.4.0"                                                            #print crate

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
